fix panel speakers spacing

--- a/src/styles/panelStyle.css
+++ b/src/styles/panelStyle.css
@@ -13,6 +13,14 @@ h3{
   margin-bottom: 10%;
 } */
 
+
+p{
+  margin-bottom: 0px !important;
+}
+
+.individualSpeaker{
+  margin-bottom: 3%;
+}
 .about-title{
   margin-bottom: 5%;
 }
@@ -29,4 +37,12 @@ h3{
 
 .fa-linkedin-square:hover{
   color: #1eb0bf;
+}
+
+.panel-speaker-pic{
+  width: 5%;
+  margin-right: 5%;
+  margin-top: 2%;
+  /* border-radius: 50%; */
+  height: auto;
 }
